<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CardView"
    app:cardCornerRadius="30dp"
    android:layout_margin="@dimen/margin_medium"
    android:backgroundTint="@color/secondaryColor"
    tools:context=".ui.StartQuizFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/stitched_border"
        android:padding="@dimen/margin_large">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_logo"
                android:background="@android:color/transparent"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                style="@style/FormText"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormText"
                android:text="@string/about_body"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormText"
                android:text="@string/created_by_n_andre_fernando"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:textAlignment="center"/>

            <ImageButton
                android:layout_width="@dimen/image_header_height"
                android:layout_height="@dimen/image_header_height"
                android:src="@drawable/github_icon"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/margin_medium"
                android:scaleType="fitCenter"
                android:layout_gravity="center"
                android:id="@+id/ib_github_logo"
                android:contentDescription="@string/cd_github_logo"/>

            <ImageButton
                android:layout_width="@dimen/opentdb_logo_width"
                android:layout_height="wrap_content"
                android:src="@drawable/opentdb_logo"
                android:background="@android:color/transparent"
                android:layout_margin="@dimen/margin_medium"
                android:layout_gravity="center"
                android:scaleType="fitCenter"
                android:id="@+id/ib_opentdb_logo"
                android:contentDescription="@string/cd_opentdb_logo"/>


        </LinearLayout>


    </ScrollView>


</android.support.v7.widget.CardView>