<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.OverviewFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card_overview_fragment"
        app:cardCornerRadius="30dp"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/secondaryColor">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:padding="@dimen/margin_medium"
            android:background="@drawable/stitched_border">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_header_height"
                android:layout_marginTop="@dimen/margin_large"
                android:src="@drawable/ic_pocket_trivia_header_logo"
                android:scaleType="fitCenter"
                android:id="@+id/image_header_overview"
                android:contentDescription="@string/cd_header_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_number_of_questions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/textView"
                style="@style/FormText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/congratulations"
                app:layout_constraintBottom_toTopOf="@+id/et_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/image_header_overview"
                app:layout_constraintVertical_chainStyle="spread" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/FormText"
                android:inputType="text"
                android:hint="@string/edit_text_hint"
                app:layout_constraintBottom_toTopOf="@+id/tv_score_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintVertical_chainStyle="spread" />



            <TextView
                android:id="@+id/tv_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/score"
                style="@style/FormText"
                app:layout_constraintBottom_toTopOf="@+id/tv_time_label"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/et_username"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/tv_time_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                style="@style/FormText"
                app:layout_constraintBottom_toTopOf="@+id/tv_total_questions_label"
                app:layout_constraintStart_toEndOf="@id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_score_label" />


            <TextView
                android:id="@+id/tv_total_questions_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_questions"
                style="@style/FormText"
                app:layout_constraintBottom_toTopOf="@+id/bt_save_score"
                app:layout_constraintStart_toEndOf="@+id/guideline_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_time_label" />

            <Button
                android:id="@+id/bt_save_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/save_score"
                style="@style/FormText"
                app:layout_constraintBottom_toTopOf="@id/image_footer_overview"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/stitched_border"
                android:backgroundTint="@color/primaryColor"
                android:padding="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/tv_total_questions_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_score_result"
                tools:text="6"
                style="@style/FormText"
                android:layout_marginStart="@dimen/margin_large"
                app:layout_constraintStart_toEndOf="@id/center_barrier"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_score_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_time_result"
                tools:text="3:10"
                style="@style/FormText"
                android:layout_marginStart="@dimen/margin_large"
                app:layout_constraintStart_toEndOf="@id/center_barrier"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_time_label"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_total_questions_result"
                tools:text="10"
                style="@style/FormText"
                android:layout_marginStart="@dimen/margin_large"
                app:layout_constraintStart_toEndOf="@id/center_barrier"
                app:layout_constraintBaseline_toBaselineOf="@id/tv_total_questions_label"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_footer_height"
                android:layout_marginTop="@dimen/margin_medium"
                android:src="@drawable/ic_pocket_trivia_footer"
                android:scaleType="fitCenter"
                android:id="@+id/image_footer_overview"
                android:contentDescription="@string/cd_footer_image"
                app:layout_constraintTop_toBottomOf="@id/bt_save_score"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <android.support.constraint.Guideline
                android:id="@+id/guideline_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.2" />

            <android.support.constraint.Barrier
                android:id="@+id/center_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="end"
                app:constraint_referenced_ids="tv_score_label, tv_time_label, tv_total_questions_label"/>

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>
</FrameLayout>