<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin_medium"
    app:cardCornerRadius="30dp"
    android:backgroundTint="@color/secondaryColor"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.SignInFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/stitched_border">

        <TextView
            android:id="@+id/tv_sign_in_header"
            style="@style/FormText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_username"
            app:layout_constraintBottom_toTopOf="@+id/et_sign_in_username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <EditText
            android:id="@+id/et_sign_in_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_large"
            android:hint="@string/edit_text_hint"
            android:textAlignment="center"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/bt_sign_in_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_header"
            android:inputType="text" />

        <Button
            android:id="@+id/bt_sign_in_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_curved_corners"
            android:backgroundTint="@color/primaryColor"
            android:padding="@dimen/margin_medium"
            android:text="@string/bt_save"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/bt_sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_sign_in_username" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/bt_sign_in_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tv_notice"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_sign_in_save" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_notice"
            style="@style/FormText.Small"
            android:text="@string/gdpr_notice"
            android:textAlignment="center"
            android:background="@drawable/border_sharp_corners"
            android:layout_margin="@dimen/margin_medium"
            android:padding="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/bt_sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>