<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="30dp"
    android:layout_margin="@dimen/margin_medium"
    android:backgroundTint="@color/secondaryColor"
    tools:context=".ui.ResultsListFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/stitched_border"
        android:padding="@dimen/margin_medium"
        android:layout_margin="@dimen/margin_small">

        <TextView
            android:id="@+id/tv_heading_results_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/high_scores"
            style="@style/FormText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.constraint.Guideline
            android:id="@+id/name_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.08"/>

        <TextView
            android:id="@+id/tv_name_results_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/results_label_name"
            style="@style/FormText.Small"
            android:textAlignment="textStart"
            app:layout_constraintEnd_toStartOf="@id/time_guide"
            app:layout_constraintStart_toEndOf="@id/name_guide"
            app:layout_constraintTop_toBottomOf="@id/tv_heading_results_label" />

        <android.support.constraint.Guideline
            android:id="@+id/time_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.55"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_time_results_label"
            android:text="@string/results_time_label"
            style="@style/FormText.Small"
            android:textAlignment="textStart"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_name_results_label"
            app:layout_constraintStart_toEndOf="@id/time_guide"
            app:layout_constraintEnd_toStartOf="@id/score_guide"/>

        <android.support.constraint.Guideline
            android:id="@+id/score_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_score_results_label"
            android:text="@string/results_score_label"
            style="@style/FormText.Small"
            android:textAlignment="textStart"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_name_results_label"
            app:layout_constraintStart_toEndOf="@id/score_guide"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.v7.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/rv_scores"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintTop_toBottomOf="@id/tv_name_results_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>




    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>