<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/CardView"
    app:cardCornerRadius="30dp"
    android:layout_margin="@dimen/margin_medium"
    android:backgroundTint="@color/secondaryColor"
    tools:context=".ui.StartQuizFragment">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_small"
        android:background="@drawable/stitched_border"
        android:padding="@dimen/margin_large">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_header_height"
            android:src="@drawable/ic_pocket_trivia_header_logo"
            android:scaleType="fitCenter"
            android:id="@+id/image_header_start_quiz"
            android:contentDescription="@string/cd_header_image"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tv_number_of_questions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_number_of_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/tv_setup_category"
            app:layout_constraintEnd_toStartOf="@+id/sp_number_of_questions"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guide"
            app:layout_constraintTop_toBottomOf="@id/image_header_start_quiz"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/tv_setup_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="5dp"
            android:text="@string/category"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/tv_setup_difficulty"
            app:layout_constraintEnd_toStartOf="@+id/sp_category"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_number_of_questions"
            app:layout_constraintVertical_chainStyle="spread_inside"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_setup_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difficulty"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/tv_setup_type"
            app:layout_constraintEnd_toStartOf="@id/sp_difficulty"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_setup_category"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <TextView
            android:id="@+id/tv_setup_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/type"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@+id/bt_start_quiz"
            app:layout_constraintEnd_toStartOf="@id/sp_type"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="@+id/left_guide"
            app:layout_constraintTop_toBottomOf="@+id/tv_setup_difficulty"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Button
            android:id="@+id/bt_start_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_quiz"
            android:background="@drawable/border_curved_corners"
            android:padding="@dimen/margin_medium"
            android:backgroundTint="@color/primaryColor"
            style="@style/FormText"
            app:layout_constraintBottom_toTopOf="@id/image_footer_start_quiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_setup_type"
            app:layout_constraintVertical_chainStyle="spread_inside" />

        <Spinner
            android:id="@+id/sp_number_of_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormText"
            tools:entries="@array/sp_number_questions"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_number_of_questions"
            app:layout_constraintBottom_toTopOf="@+id/sp_category"
            app:layout_constraintEnd_toStartOf="@+id/right_guide"
            app:layout_constraintStart_toEndOf="@id/tv_number_of_questions"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sp_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:spinnerMode="dialog"
            tools:entries="@array/category_names"
            style="@style/FormText"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_setup_category"
            app:layout_constraintBottom_toTopOf="@+id/sp_difficulty"
            app:layout_constraintEnd_toStartOf="@+id/right_guide"
            app:layout_constraintStart_toEndOf="@id/tv_setup_category"
            app:layout_constraintTop_toBottomOf="@+id/sp_number_of_questions" />

        <Spinner
            android:id="@+id/sp_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormText"
            tools:entries="@array/difficulties"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_setup_difficulty"
            app:layout_constraintBottom_toTopOf="@+id/sp_type"
            app:layout_constraintEnd_toStartOf="@+id/right_guide"
            app:layout_constraintStart_toEndOf="@id/tv_setup_difficulty"
            app:layout_constraintTop_toBottomOf="@+id/sp_category" />

        <Spinner
            android:id="@+id/sp_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/FormText"
            tools:entries="@array/types"
            app:layout_constraintBaseline_toBaselineOf="@id/tv_setup_type"
            app:layout_constraintBottom_toTopOf="@+id/bt_start_quiz"
            app:layout_constraintEnd_toStartOf="@+id/right_guide"
            app:layout_constraintStart_toEndOf="@id/tv_setup_type"
            app:layout_constraintTop_toBottomOf="@+id/sp_difficulty" />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_footer_height"
            android:layout_marginTop="@dimen/margin_medium"
            android:src="@drawable/ic_pocket_trivia_footer"
            android:scaleType="fitCenter"
            android:id="@+id/image_footer_start_quiz"
            android:contentDescription="@string/cd_footer_image"
            app:layout_constraintTop_toBottomOf="@id/bt_start_quiz"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <android.support.constraint.Guideline
            android:id="@+id/left_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <android.support.constraint.Guideline
            android:id="@+id/right_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />



    </android.support.constraint.ConstraintLayout>


</android.support.v7.widget.CardView>